--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "cloudinary": "^2.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.0",
     "react-router-dom": "^6.23.0",
+    "react-spinner": "^0.2.7",
+    "react-spinners": "^0.13.8",
+    "react-toastify": "^10.0.5",
     "swiper": "^11.1.1"
   },
   "devDependencies": {
